--- a/crud/src/main/resources/templates/project_form.html
+++ b/crud/src/main/resources/templates/project_form.html
@@ -18,7 +18,7 @@
 <h2 class="text-center">[[${pageTitle}]]</h2>
 
 <div class="my-3">
-    <form th:action="@{/projects/save}" method="post" enctype="multipart/form-data" th:object="${project}"
+    <form th:action="@{/project/save}" method="post" enctype="multipart/form-data" th:object="${project}"
           style="max-width: 550px; margin: 0 auto">
 
         <input type="hidden" th:field="*{id}"/>
@@ -41,14 +41,14 @@
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label" for="start_at">Start date</label>
                 <div class="col-sm-9">
-                    <input type="text" th:field="*{start_at}" required class="form-control"
+                    <input type="date" pattern="yyyy-MM-dd" th:field="*{start_at}" required class="form-control"
                            id="start_at"/>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label" for="end_at">End date</label>
                 <div class="col-sm-9">
-                    <input type="text" th:field="*{end_at}" required class="form-control"
+                    <input type="date" pattern="yyyy-MM-dd" th:field="*{end_at}" required class="form-control"
                            id="end_at"/>
                 </div>
             </div>
