--- a/crud/src/main/resources/templates/project_members.html
+++ b/crud/src/main/resources/templates/project_members.html
@@ -1,10 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
+    <title>CNS|Project Management</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/sweetalert2.min.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/sweetalert2.min.js}"></script>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
+<h2 class="text-center">[[${pageTitle}]]</h2>
 
+<div class="my-3">
+    <form th:action="@{/project/save}" method="post" enctype="multipart/form-data" th:object="${members}"
+          style="max-width: 550px; margin: 0 auto">
+
+       <!-- <input type="hidden" th:field="*{id}"/>
+
+        <div class="p-3">
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label" for="name">Name</label>
+                <div class="col-sm-9">
+                    <input type="text" th:field="*{name}" required class="form-control"
+                           id="name"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-3 col-form-label" for="intro">Intro</label>
+                <div class="col-sm-9">
+                    <input type="text" th:field="*{intro}" required class="form-control"
+                           id="intro"/>
+                </div>
+            </div>
+            <div class="text-center">
+                <input type="submit" value="Save" class="btn btn-primary btn-sm mr-2"/>
+                <input type="button" value="Cancel" id="btnCancel" class="btn btn-secondary btn-sm"/>
+            </div>
+        </div>-->
+    </form>
+</div>
+<div class="my-3">
+    <div th:if="${members.size() > 0}">
+        <table class="table table-sm">
+            <thead class="thead-dark">
+                <tr>
+                    <th>SL</th>
+                    <th>User Name</th>
+                    <th>User Email</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="member,iter : ${members}">
+                    <th>[[ ${iter.index+1} ]]</th>
+                    <th>[[ ${member.name} ]]</th>
+                    <th>[[ ${member.email} ]]</th>
+                    <th>
+                        <button type="button"  th:attr="data-id=${member.projectMemberId}" class="btn btn-sm btn-warning remove_member"><i class="fa fa-x"></i></button>
+                    </th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<script type="text/javascript">
+    $(document).ready(function (){
+        $("#btnCancel").on("click",function () {
+            window.location="[[@{/projects}]]";
+        });
+
+        $(".remove_member").on("click",function(){
+            let id = $(this).data("id");
+
+            swal.fire({
+                toast:true,
+                title: 'Remove member?',
+                type: 'info',
+                showCancelButton: !0,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Ok",
+                confirmButtonClass: "btn btn-primary",
+                cancelButtonClass: "btn btn-danger ml-1",
+                buttonsStyling: !1
+            }).then((result) => {
+                if (result.value) {
+                    /**let urlStr = "@{'/project_member/remove/_param'}";
+                    url = urlStr.replace("_param",userId+"/"+projectId);**/
+                    window.location.href="/project_member/remove/"+id;
+
+                }
+            });
+        });
+    })
+</script>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
