--- a/crud/src/main/resources/templates/project_form.html
+++ b/crud/src/main/resources/templates/project_form.html
@@ -14,50 +14,67 @@
     <script type="text/javascript" th:src="@{/webjars/bootstrap/bootstrap.min.js}"></script>
 </head>
 <body>
+<div class="container">
 <div th:replace="fragments/header :: header"></div>
-<h2 class="text-center">[[${pageTitle}]]</h2>
 
 <div class="my-3">
-    <form th:action="@{/project/save}" method="post" enctype="multipart/form-data" th:object="${project}"
-          style="max-width: 550px; margin: 0 auto">
+    <div class="card">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card-header">[[${pageTitle}]]</div>
+                <form th:action="@{/project/save}" method="post" enctype="multipart/form-data" th:object="${project}"
+                      style="max-width: 550px; margin: 0 auto">
 
-        <input type="hidden" th:field="*{id}"/>
+                    <input type="hidden" th:field="*{id}"/>
 
-        <div class="p-3">
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="name">Name</label>
-                <div class="col-sm-9">
-                    <input type="text" th:field="*{name}" required class="form-control"
-                           id="name"/>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="intro">Intro</label>
-                <div class="col-sm-9">
-                    <input type="text" th:field="*{intro}" required class="form-control"
-                           id="intro"/>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="start_at">Start date</label>
-                <div class="col-sm-9">
-                    <input type="date" pattern="yyyy-MM-dd" th:field="*{start_at}" required class="form-control"
-                           id="start_at"/>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="end_at">End date</label>
-                <div class="col-sm-9">
-                    <input type="date" pattern="yyyy-MM-dd" th:field="*{end_at}" required class="form-control"
-                           id="end_at"/>
-                </div>
-            </div>
-            <div class="text-center">
-                <input type="submit" value="Save" class="btn btn-primary btn-sm mr-2"/>
-                <input type="button" value="Cancel" id="btnCancel" class="btn btn-secondary btn-sm"/>
+                    <div class="p-3">
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="name">Name</label>
+                            <div class="col-sm-9">
+                                <input type="text" th:field="*{name}" required class="form-control"
+                                       id="name"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="intro">Intro</label>
+                            <div class="col-sm-9">
+                                <input type="text" th:field="*{intro}" required class="form-control"
+                                       id="intro"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="start_at">Start date</label>
+                            <div class="col-sm-9">
+                                <input type="date" pattern="yyyy-MM-dd" th:field="*{start_at}" required class="form-control"
+                                       id="start_at"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="end_at">End date</label>
+                            <div class="col-sm-9">
+                                <input type="date" pattern="yyyy-MM-dd" th:field="*{end_at}" required class="form-control"
+                                       id="end_at"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label" for="status">Project Status</label>
+                            <div class="col-sm-4">
+                               <select class="form-control" name="status" id="status" th:field="*{status_id}">
+                                   <option th:each="status: ${lStatuses}" th:value="${status.id}"
+                                           th:text="${status.name}"></option>
+                               </select>
+                            </div>
+                        </div>
+
+                        <div class="text-center">
+                            <input type="submit" th:value="${submitBtnName}" class="btn btn-primary btn-sm mr-2"/>
+                            <input type="button" value="Cancel" id="btnCancel" class="btn btn-secondary btn-sm"/>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
+    </div>
 </div>
 <script type="text/javascript">
     $(document).ready(function (){
@@ -67,5 +84,6 @@
     })
 </script>
 <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
