--- a/crud/src/main/resources/templates/project_members.html
+++ b/crud/src/main/resources/templates/project_members.html
@@ -6,69 +6,114 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
     <title>CNS|Project Management</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/sweetalert2.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/sweetalert2.min.js}"></script>
 </head>
 <body>
+<div class="container">
 <div th:replace="fragments/header :: header"></div>
 <h2 class="text-center">[[${pageTitle}]]</h2>
 
 <div class="my-3">
-    <form th:action="@{/project/save}" method="post" enctype="multipart/form-data" th:object="${members}"
-          style="max-width: 550px; margin: 0 auto">
-
-       <!-- <input type="hidden" th:field="*{id}"/>
-
-        <div class="p-3">
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="name">Name</label>
-                <div class="col-sm-9">
-                    <input type="text" th:field="*{name}" required class="form-control"
-                           id="name"/>
+    <div class="card">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card-header">[[${pageTitle}]]</div>
+                <div class="card-body">
+                    <form th:action="@{/project_members/assign}" method="post" enctype="multipart/form-data" th:object="${assignMemberForm}"
+                          style="max-width: 550px; margin: 0 auto">
+                        <div class="p-3">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label" for="project">Name</label>
+                                <div class="col-sm-9" id="project" th:name="project" style="">
+                                    <select readonly="" class="form-control make-readonly-bg" th:field="*{projectId}">
+                                        <option th:value="${project.projectId}" th:text="${project.projectName}"></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label" for="projectMembers">Member</label>
+                                <div class="col-sm-9">
+                                    <div th:if="${projectMembers.size() > 0}">
+                                        <select  th:field="*{users}" th:name="projectMembers" id="projectMembers" name="projectMembers" class="form-control" multiple>
+                                            <option th:each="user : ${projectMembers}" th:value="${user.userId}" th:text="${user.name}">
+                                            </option>
+                                        </select>
+                                    </div>
+                                    <div th:unless="${projectMembers.size() > 0}">
+                                        <select  th:field="*{users}" th:name="projectMembers" class="form-control">
+                                            <option value="">No user available</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <input type="submit" value="Assign" class="btn btn-primary btn-sm mr-2"/>
+                                <input type="button" value="Cancel" id="btnCancel" class="btn btn-secondary btn-sm"/>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-3 col-form-label" for="intro">Intro</label>
-                <div class="col-sm-9">
-                    <input type="text" th:field="*{intro}" required class="form-control"
-                           id="intro"/>
-                </div>
-            </div>
-            <div class="text-center">
-                <input type="submit" value="Save" class="btn btn-primary btn-sm mr-2"/>
-                <input type="button" value="Cancel" id="btnCancel" class="btn btn-secondary btn-sm"/>
-            </div>
-        </div>-->
-    </form>
+        </div>
+    </div>
+
 </div>
 <div class="my-3">
-    <div th:if="${members.size() > 0}">
-        <table class="table table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <th>SL</th>
-                    <th>User Name</th>
-                    <th>User Email</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="member,iter : ${members}">
-                    <th>[[ ${iter.index+1} ]]</th>
-                    <th>[[ ${member.name} ]]</th>
-                    <th>[[ ${member.email} ]]</th>
-                    <th>
-                        <button type="button"  th:attr="data-id=${member.projectMemberId}" class="btn btn-sm btn-warning remove_member"><i class="fa fa-x"></i></button>
-                    </th>
-                </tr>
-            </tbody>
-        </table>
+    <div class="card">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card-header">Assigned Members</div>
+                <div class="card-body">
+                    <div th:if="${members.size() > 0}">
+                        <table class="table table-sm table-bordered table-hover">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>SL</th>
+                                <th>User Name</th>
+                                <th>User Email</th>
+                                <th>Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="member,iter : ${members}">
+                                <td>[[ ${iter.index+1} ]]</td>
+                                <td>[[ ${member.name} ]]</td>
+                                <td>[[ ${member.email} ]]</td>
+                                <td>
+                                    <button type="button"  th:attr="data-id=${member.projectMemberId}" class="btn btn-sm btn-warning remove_member"><i class="fa fa-x"></i></button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="" th:unless="${members.size() > 0}">
+                        <table class="table table-sm table-bordered table-hover">
+                            <thead class="thead-dark">
+                            <tr>
+                                <th>SL</th>
+                                <th>User Name</th>
+                                <th>User Email</th>
+                                <th>Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="text-center" th:colspan="4">Outer members not assigned yet!</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript">
@@ -103,5 +148,6 @@
     })
 </script>
 <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
